# lambda-managed-instances-labs

./: .gitignore  LICENSE  README.md  pyproject.toml
infra/cfn/: ec2-s3-ssm.yml
infra/diagrams/: architecture.drawio
infra/events/: stage1_tmp.json  stage2_mem.json  stage3_time.json
scripts/: make_dataset.sh  setup_venv.sh
src/lmi_lab/: __init__.py  cli.py  lambda_handler.py
src/lmi_lab/core/: config.py  io_s3.py  metrics.py  normalize.py  result_writer.py  schema.py
src/lmi_lab/data_prep/: __init__.py  generate.py  upload_s3.py
src/lmi_lab/impls/: __init__.py
src/lmi_lab/impls/codex/engines/: __init__.py  duckdb_engine.py  duckdb_engine_optimized.py  fireducks_engine.py  pandas_engine.py  pandas_engine_optimized.py  polars_engine.py  polars_engine_optimized.py  (+1 more)
src/lmi_lab/impls/engines/: common.py  duckdb_engine.py  duckdb_engine_optimized.py  fireducks_engine.py  pandas_engine.py  pandas_engine_optimized.py  polars_engine.py  polars_engine_optimized.py  spark_engine.py
src/lmi_lab/reference_impl/: __init__.py  reference_engine.py
src/lmi_lab/runners/: aws_runner.py  benchmark.py  compare.py
tests/: test_aws_runner_artifacts.py  test_aws_runner_memray.py  test_codex_common.py  test_codex_common_primary_keys.py  test_data_prep_generate.py  test_duckdb_engine.py  test_engines_common.py  test_engines_common_primary_keys.py  test_fireducks_engine.py  test_normalize.py  test_pandas_engine.py  test_polars_engine.py  test_polars_null_handling.py  test_reference_oracle.py  test_spark_engine.py
tests/fixtures/: after_small.tsv  before_small.tsv
